--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,4 +1,8 @@
 <h1>Gnip API demos<h1>
+<h2>30-day Search --> @tweets </h2>  
+<h2>@tweets.ids --> Engagement API</h2>  
+<h2>@tweets.actor.ids --> Audience API</h2>    
+  
 
 <h3>
 </br>
