--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,14 +1,11 @@
 <h1>Gnip API demos<h1>
-<h2>30-day Search --> @tweets </h2>  
-<h2>@tweets.ids --> Engagement API</h2>  
-<h2>@tweets.actor.ids --> Audience API</h2>    
-  
 
-<h3>
+
+<h2>
 </br>
-<a href="/display_search_results">Click to get Tweets</a>
+<a href="/display_search_results">30-day Search --> @tweets</a>
 </br>
-<a href="/get_engagements">Click to get Engagement metrics</a>
+<a href="/get_engagements">@tweets.ids --> Engagement API</a>
 </br>
-<a href="/get_audience">Click to build Audience (coming?)</a>
-</h3>
+<a href="/get_audience">@tweets.actor.ids --> Audience API</a>
+</h2>
