--- a/app/views/search_results.erb
+++ b/app/views/search_results.erb
@@ -1,3 +1,5 @@
+<a href="/">Home</a>
+
 <% if @tweets %>
    <!-- <% puts "IN ERB: tweet counts: #{@tweets.count}" %> -->
    <!-- <% puts "IN ERB: #{@tweets[0]["id"]}" %>  -->
