--- a/app/views/search_results.erb
+++ b/app/views/search_results.erb
@@ -9,7 +9,7 @@
 <h2> Search Tweet Display    </h2>
 
 <h3> Source: 30-day Search with query: "snowman" </h3>
-<h3> Request: GET /prod.json?query=snowman&maxResults=10</h3>
+<h3> Request: GET /prod.json?query=snowman&maxResults=50</h3>
 
 <h2> Summaries </h2>
 
@@ -18,6 +18,7 @@
 
     <thead>
       <tr>
+        <th>Tweet Time</th>
         <th>Tweet ID</th>
         <th>Actor ID</th>
         <th>Actor</th>
@@ -27,6 +28,7 @@
     <tbody>
       <% @tweets.each do |tweet| %>
         <tr>
+          <td><%= tweet["postedTime"] %></td>
           <td><%= tweet["id"].split(':')[-1] %></td>
           <td><%= tweet["actor"]["id"].split(':')[-1] %></td>
           <td><%= tweet["actor"]["preferredUsername"] %></td>
