JM: eating lunch updates...

--- a/app/views/search_results.erb
+++ b/app/views/search_results.erb
@@ -4,8 +4,7 @@
  
 <h2> Search Tweet Display    </h2>
 
-<h3> Source: 30-day Search with query: "snowman" </h3>
-<h3> Request: GET /prod.json?query=snowman&maxResults=50</h3>
+<h3> Source: 30-day Search with query: </h3> <%= query %>
 
 <h2> Summaries </h2>
 
