--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -3,7 +3,7 @@
 
 <h2>
 </br>
-<a href="/display_search_results">30-day Search --> @tweets</a>
+<a href="/create_search_request">30-day Search --> @tweets</a>
 </br>
 <a href="/get_engagements">@tweets.ids --> Engagement API</a>
 </br>
