--- a/app/views/search_results.erb
+++ b/app/views/search_results.erb
@@ -5,6 +5,8 @@
 <h2> Search Tweet Display    </h2>
 
 <h3> Source: 30-day Search with query: </h3> <%= query %>
+    
+<h3><% @tweets.count %> Tweets </h3>
 
 <h2> Summaries </h2>
 
